# SLAVA

./: .gitignore  LICENSE  README.md  pyproject.toml
slava/: config.py
slava/models/: claude.py  gemini.py  gigachat.py  huggingface.py  ollama.py  openai.py  yandexgpt.py
slava/modules/: data_converter.py  data_loader.py  leaderboard.py  metrics.py  model_eval.py  model_handler.py  telegram_api.py
slava/modules/agent/: assistant_graph.py  base.py  handler.py  results.csv  runnables.py  utils.py
slava/modules/agent/data/: benchmark_results.jsonl
slava/modules/agent/nodes/: bench_gen.py  contextualize_chain.py  estimation.py  model_eval.py  parse_pdf.py  scenario.py  search.py  summary.py
slava/modules/agent/protection/: __init__.py  base.py  exceeding.py  models.py  overall.py
slava/modules/agent/safe/: __init__.py  length_limit.py  protection_result.py  protector_base.py
slava/modules/utils/: class_metrics.py  metrics_helpers.py  metrics_utils.py
slava/notebooks/: Llama-405b_result.ipynb  answers.jsonl  api_models_eval.ipynb  data_converter.ipynb  data_loader.ipynb  metrics.ipynb  model_eval.ipynb  model_eval_claude.ipynb  model_eval_gemini.ipynb  model_eval_openai.ipynb  model_handler.ipynb  result.ipynb  validate.ipynb
slava/notebooks/example_data/: example.csv
slava/notebooks/examples/: example_for_data_converter.csv  example_for_metrics.csv
slava/notebooks/new_dataset/: 10row.csv  tools.ipynb
src/: config.py
