[tool.poetry]
name = "slava"
version = "0.1.0"
description = ""
authors = ["Rinat Sharafetdinov <rinat.sharafetdinov42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.2.2"
fuzzywuzzy = "^0.18.0"
huggingface-hub = "^0.25.1"
langchain = "^0.3.0"
langchain-huggingface = "^0.1.0"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
